--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "javascript"
   ],
   "dependencies": {
-    "babel-runtime": "6.26.0",
+    "babel-runtime": "^6.26.0",
     "stellar-sdk": "^0.8.1",
     "axios": "^0.18.0",
     "@ledgerhq/hw-transport-u2f": "^4.12.0",
